module12/httpserver.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: httpserver
  labels:
    istio-injection: enabled
---
# service1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: service1:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: httpserver
spec:
  ports:
    - name: http-service1
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service1
---
# service2
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
        - name: service2
          image: service2:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  namespace: httpserver
spec:
  ports:
    - name: http-service2
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service2
---
# service3
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  namespace: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
        - name: service3
          image: service3:1.0.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: httpserver
spec:
  ports:
    - name: http-service3
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service3
